--- a/.github/workflows/pull-request-build-and-test.yml
+++ b/.github/workflows/pull-request-build-and-test.yml
@@ -34,7 +34,7 @@ jobs:
           cache: "npm"
 
       - name: Install NPM packages
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Run build
         run: npm run build
@@ -70,7 +70,7 @@ jobs:
           cache: "npm"
 
       - name: Install NPM packages
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Run build
         run: npm run build
@@ -105,7 +105,7 @@ jobs:
           cache: "npm"
 
       - name: Install NPM packages
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Run build
         run: npm run build
@@ -137,7 +137,7 @@ jobs:
           cache: "npm"
 
       - name: Install NPM packages
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Run build
         run: npm run build
