--- a/.github/workflows/push-publish-package.yml
+++ b/.github/workflows/push-publish-package.yml
@@ -30,7 +30,7 @@ jobs:
           cache: "npm"
 
       - name: Install NPM packages
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Run build
         run: npm run build
@@ -62,7 +62,7 @@ jobs:
         with:
           node-version: 16.x
           cache: "npm"
-      - run: npm install
+      - run: npm install --legacy-peer-deps
       - run: npm run build
       - uses: JS-DevTools/npm-publish@v1
         with:
