--- a/.github/workflows/pull-request-build-and-test.yml
+++ b/.github/workflows/pull-request-build-and-test.yml
@@ -46,6 +46,7 @@ jobs:
         run: npm run test:forge
 
   build-and-test-bsc:
+    if: false
     env:
       MNEMONIC: "${{ secrets.MNEMONIC }}"
       FORK_URL_BSC: "${{ secrets.FORK_URL_BSC }}"
